# klystron

./: .gitignore  Cargo.toml  README.md  deep_checkerboard.frag  notes.md  problem.md
examples/: cube.rs  dynamic.rs  microphone.rs  particles.rs  portal.rs  window.rs  windowed_only.rs
examples/shaders/: compile-shaders.sh  particle.comp  particle.comp.spv  particle_base.comp  particle_forces.comp  particle_forces.comp.spv  particle_motion.comp  particle_motion.comp.spv  unlit.frag  unlit.frag.spv  unlit.vert  unlit.vert.spv
notes/: design.md  interface.rs  notes.md  todo.md  usage.rs
shaders/: compile-shaders.ps1  compile-shaders.sh  unlit.frag  unlit.frag.spv  unlit.vert  unlit.vert.spv
src/: allocated_buffer.rs  command_buffer.rs  command_buffers.rs  core.rs  desc_set_allocator.rs  extensions.rs  frame_sync.rs  handle.rs  hardware_query.rs  lib.rs  main.rs  material.rs  mesh.rs  openxr_backend.rs  openxr_caddy.rs  particle_system.rs  portal.rs  portal_motion.rs  postprocessing.rs  swapchain_images.rs  vertex.rs  winit_backend.rs
src/runtime/: mod.rs  mouse_camera.rs  runtime_2d.rs  runtime_3d.rs  target_time.rs
src/vr/: mod.rs  xr_prelude.rs
src/windowed/: camera.rs  mod.rs  mouse_camera.rs
