[package]
name = "klystron"
version = "0.1.0"
authors = ["Masterchef365 <duncan.freeman1@gmail.com>"]
edition = "2018"

[features]
builtin_shaders = []

[dependencies]
erupt = "0.15"
winit = "0.24"
openxr = { version = "0.14.0", features = ["loaded"] }
nalgebra = "0.25"
bytemuck = "1.3.1"
anyhow = "1"
log = "0.4"
ctrlc = "3.1.5"
slotmap = "1.0"
vk_core = { git = "https://github.com/Masterchef365/vk_core.git", branch = "main" }
gpu-alloc-erupt = "0.1"
gpu-alloc = "0.2"
