[package]
name = "klystron"
version = "0.1.0"
authors = ["Masterchef365 <duncan.freeman1@gmail.com>"]
edition = "2018"

[features]
builtin_shaders = []

[dependencies]
erupt = "0.15"
winit = "0.22"
openxr = { version = "0.13", features = ["static"] }
nalgebra = "0.22"
bytemuck = "1.3.1"
anyhow = "1"
log = "0.4"
ctrlc = "3.1.5"
genmap = "1.0"
vk_core = { git = "https://github.com/Masterchef365/vk_core.git", rev = "37d3f6e" }
gpu-alloc-erupt = "0.1"
gpu-alloc = "0.2"
